--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
     "rules": {
         "indent": [
             "error",
-            4
+            4,
+            { "SwitchCase": 1 }
         ],
         "linebreak-style": [
             "error",
