--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "retidy",
   "version": "0.1.0",
-  "description": "Extract each file from a webpack bundle",
+  "description": "Extract, unminify, and beautify (\"retidy\") each file from a webpack/parcel bundle",
   "main": "dist/main.js",
   "repository": {
     "type": "git",
@@ -13,6 +13,15 @@
     "url": "https://github.com/Xmader/retidy/issues"
   },
   "homepage": "https://github.com/Xmader/retidy#readme",
+  "keywords": [
+    "ast",
+    "debundle",
+    "unpack",
+    "parcel",
+    "webpack",
+    "reverse engineering",
+    "reverse engineer"
+  ],
   "dependencies": {
     "@babel/generator": "^7.7.2",
     "@babel/parser": "^7.7.3",
@@ -21,9 +30,12 @@
   },
   "devDependencies": {
     "@types/babel__generator": "^7.6.0",
-    "@types/babel__traverse": "^7.0.8"
+    "@types/babel__traverse": "^7.0.8",
+    "@types/node": "^12.12.11",
+    "typescript": "^3.5.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc --watch"
   }
 }
