--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,9 @@
         "indent": [
             "error",
             4,
-            { "SwitchCase": 1 }
+            {
+                "SwitchCase": 1
+            }
         ],
         "linebreak-style": [
             "error",
@@ -31,6 +33,7 @@
             "warn",
             "never"
         ],
-        "no-console": "off"
+        "no-console": "off",
+        "no-fallthrough": "off"
     }
 }
