--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/parser": "^7.7.3",
     "@babel/traverse": "^7.7.2",
     "@babel/types": "^7.7.2",
-    "recast": "^0.18.5"
+    "ast-types": "^0.13.2"
   },
   "devDependencies": {
     "@types/babel__traverse": "^7.0.8",
