--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "retidy",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Extract, unminify, and beautify (\"retidy\") each file from a webpack/parcel bundle",
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Xmader/retidy.git"
@@ -26,10 +26,12 @@
     "@babel/parser": "^7.7.3",
     "@babel/traverse": "^7.7.2",
     "@babel/types": "^7.7.2",
-    "ast-types": "^0.13.2"
+    "ast-types": "^0.13.2",
+    "fs-extra": "^8.1.0"
   },
   "devDependencies": {
     "@types/babel__traverse": "^7.0.8",
+    "@types/fs-extra": "^8.0.1",
     "@types/node": "^12.12.11",
     "typescript": "^3.5.2"
   },
