--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Extract, unminify, and beautify (\"retidy\") each file from a webpack/parcel bundle",
   "main": "dist/index.js",
+  "bin": {
+    "retidy": "./cli/cli.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Xmader/retidy.git"
@@ -27,12 +30,14 @@
     "@babel/traverse": "^7.7.2",
     "@babel/types": "^7.7.2",
     "ast-types": "^0.13.2",
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "yargs": "^15.0.2"
   },
   "devDependencies": {
     "@types/babel__traverse": "^7.0.8",
     "@types/fs-extra": "^8.0.1",
     "@types/node": "^12.12.11",
+    "@types/yargs": "^13.0.3",
     "typescript": "^3.5.2"
   },
   "scripts": {
